--- a/package.json
+++ b/package.json
@@ -1,22 +1,28 @@
 {
   "name": "feedback-backend",
   "version": "1.0.0",
-  "type": "module",
-  "main": "index.js",
+  "description": "Feedback API with TypeScript and MongoDB",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "node server.js",
+    "start": "node dist/index.js",
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "body-parser": "^2.2.2",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "fs-extra": "^11.3.3",
-    "uuid": "^13.0.0"
+    "mongoose": "^9.1.3"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.0.0",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.9.3"
   }
 }
