--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "feedback-backend",
   "version": "1.0.0",
   "description": "Feedback API with TypeScript and MongoDB",
+  "engines": {
+    "node": ">=20.x"
+  },
   "main": "dist/index.js",
   "scripts": {
     "start": "node dist/index.js",
