--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,5 @@
 {
     "version": 2,
-    "builds": [
-        {
-            "src": "src/index.ts",
-            "use": "@vercel/node"
-        }
-    ],
     "headers": [
         {
             "source": "/(.*)",
@@ -29,10 +23,10 @@
             ]
         }
     ],
-    "routes": [
+    "rewrites": [
         {
-            "src": "/(.*)",
-            "dest": "src/index.ts"
+            "source": "/(.*)",
+            "destination": "src/index.ts"
         }
     ]
 }
